removed args from Dotdict initialization

--- a/Dictionaries/DotDictTutorial.ipynb
+++ b/Dictionaries/DotDictTutorial.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "raw",
-   "id": "a2f5e5bd",
+   "id": "de79ce51",
    "metadata": {},
    "source": [
     "We can use UserDict to intercept/modify setting or getting attributes to a dictionary\n",
@@ -17,8 +17,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "b7300032",
+   "execution_count": 6,
+   "id": "cba6d445",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,16 +32,21 @@
     "        self.__data = kwargs\n",
     "        self.update(**kwargs)\n",
     "\n",
-    "        for arg in args:\n",
-    "            self.__data[arg] = None\n",
-    "            setattr(self, arg, None)\n",
-    "\n",
     "    def __getitem__(self, key):\n",
     "        try:\n",
     "            return getattr(self, self.__convert_key(key))\n",
     "        except AttributeError:\n",
     "            raise KeyError(key)\n",
+    "    \n",
+    "    def __setitem__(self, key, value):\n",
+    "        print(f\"__setitem__ called with {key} and {value}\")\n",
+    "        setattr(self, self.__convert_key(key), value)\n",
     "\n",
+    "    def __delitem__(self, key):\n",
+    "        print(f\"__delitem__ with '{key}'\")\n",
+    "        del self.__data[self.__convert_key(key)]\n",
+    "        del self.__dict__[self.__convert_key(key)]\n",
+    "    \n",
     "    def __setattr__(self, prop: str, value):\n",
     "        if prop == \"_DotDict__data\":\n",
     "            super().__setattr__(prop, value)\n",
@@ -54,14 +59,6 @@
     "                prop_obj = value\n",
     "            super().__setattr__(prop, prop_obj)\n",
     "            self.__data[prop] = value\n",
-    "\n",
-    "    def __setitem__(self, key, value):\n",
-    "        print(f\"__setitem__ called with {key} and {value}\")\n",
-    "        setattr(self, self.__convert_key(key), value)\n",
-    "\n",
-    "    def __delitem__(self, key):\n",
-    "        del self.__data[self.__convert_key(key)]\n",
-    "        del self.__dict__[self.__convert_key(key)]\n",
     "\n",
     "    def __iter__(self):\n",
     "        iterator = iter(self.__dict__)\n",
@@ -112,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "85f911ac",
+   "id": "aa780615",
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "b5d87fe0",
+   "id": "49cecd41",
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "3316be8d",
+   "id": "ea1c4d42",
    "metadata": {},
    "outputs": [
     {
@@ -210,8 +207,100 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "id": "fe7712f9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "__setitem__ called with k1 and {'k2': 'v2'}\n",
+      "__setitem__ called with k2 and v2\n",
+      "For key=k1 value type is <class '__main__.DotDict'>, val=\n",
+      "{\n",
+      "    \"k2\": \"v2\"\n",
+      "}\n"
+     ]
+    }
+   ],
+   "source": [
+    "d = DotDict(k1={\"k2\": \"v2\"})\n",
+    "for key, val in d.items():\n",
+    "    print(f\"For key={key} value type is {type(val)}, val=\\n{val}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "f448269b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "__setitem__ called with k2 and {'k3': 'v3'}\n",
+      "__setitem__ called with k3 and v3\n",
+      "{'k1': {'k2': {'k3': 'v3'}}}\n",
+      "{\n",
+      "    \"k1\": {\n",
+      "        \"k2\": {\n",
+      "            \"k3\": \"v3\"\n",
+      "        }\n",
+      "    }\n",
+      "}\n"
+     ]
+    }
+   ],
+   "source": [
+    "d = DotDict()\n",
+    "\n",
+    "d.k1 = {\"k2\": {\"k3\": \"v3\"}}\n",
+    "print(d._DotDict__data)\n",
+    "print(d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "efb2c02b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "__delitem__ with 'k3'\n"
+     ]
+    }
+   ],
+   "source": [
+    "del d.k1.k2[\"k3\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "d65d5c08",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'k1': {'k2': {}}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(d._DotDict__data)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "f04b9b17",
+   "id": "4b49a325",
    "metadata": {},
    "outputs": [],
    "source": []
